@@ -1,0 +1,103 @@
+// -*- C++ -*-
+// $Id$
+
+/**
+ * Code generated by the The ACE ORB (TAO) IDL Compiler v1.8.2
+ * TAO and the TAO IDL Compiler have been developed by:
+ *       Center for Distributed Object Computing
+ *       Washington University
+ *       St. Louis, MO
+ *       USA
+ *       http://www.cs.wustl.edu/~schmidt/doc-center.html
+ * and
+ *       Distributed Object Computing Laboratory
+ *       University of California at Irvine
+ *       Irvine, CA
+ *       USA
+ * and
+ *       Institute for Software Integrated Systems
+ *       Vanderbilt University
+ *       Nashville, TN
+ *       USA
+ *       http://www.isis.vanderbilt.edu/
+ *
+ * Information about TAO is available at:
+ *     http://www.cs.wustl.edu/~schmidt/TAO.html
+ **/
+
+// TAO_IDL - Generated from
+// be/be_codegen.cpp:1661
+
+#include "Hello_MyFoo_objA_conn_i.h"
+
+namespace CIAO_Hello_AMI4CCM_MyFoo_obj_Connector_AMI4CCM_Connector_Impl
+{
+  AMI4CCM_MyFoo_objReplyHandler_i::AMI4CCM_MyFoo_objReplyHandler_i (void)
+  {
+  }
+
+  AMI4CCM_MyFoo_objReplyHandler_i::~AMI4CCM_MyFoo_objReplyHandler_i (void)
+  {
+  }
+
+  void
+  AMI4CCM_MyFoo_objReplyHandler_i::foo (::CORBA::Long /* ami_return_val */,
+  const char * /* answer */)
+  {
+    /* Your code here. */
+  }
+
+  void
+  AMI4CCM_MyFoo_objReplyHandler_i::foo_excep (::CCM_AMI::ExceptionHolder_ptr /* excep_holder */)
+  {
+    /* Your code here. */
+  }
+
+  void
+  AMI4CCM_MyFoo_objReplyHandler_i::hello (::CORBA::Long /* answer */)
+  {
+    /* Your code here. */
+  }
+
+  void
+  AMI4CCM_MyFoo_objReplyHandler_i::hello_excep (::CCM_AMI::ExceptionHolder_ptr /* excep_holder */)
+  {
+    /* Your code here. */
+  }
+
+  void
+  AMI4CCM_MyFoo_objReplyHandler_i::get_rw_attrib (::CORBA::Short /* rw_attrib */)
+  {
+    /* Your code here. */
+  }
+
+  void
+  AMI4CCM_MyFoo_objReplyHandler_i::get_rw_attrib_excep (::CCM_AMI::ExceptionHolder_ptr /* excep_holder */)
+  {
+    /* Your code here. */
+  }
+
+  void
+  AMI4CCM_MyFoo_objReplyHandler_i::set_rw_attrib (void)
+  {
+    /* Your code here. */
+  }
+
+  void
+  AMI4CCM_MyFoo_objReplyHandler_i::set_rw_attrib_excep (::CCM_AMI::ExceptionHolder_ptr /* excep_holder */)
+  {
+    /* Your code here. */
+  }
+
+  void
+  AMI4CCM_MyFoo_objReplyHandler_i::get_ro_attrib (::CORBA::Short /* ro_attrib */)
+  {
+    /* Your code here. */
+  }
+
+  void
+  AMI4CCM_MyFoo_objReplyHandler_i::get_ro_attrib_excep (::CCM_AMI::ExceptionHolder_ptr /* excep_holder */)
+  {
+    /* Your code here. */
+  }
+}
